--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .name-highlight{
     color: orange;
 }
@@ -24,4 +27,43 @@ h1{
 }
 section{
     height: 500px;
+    padding-bottom: 150px;
+}
+.linkedin-btn{
+    text-decoration: none;
+    color: white;
+    background-image: linear-gradient(45deg, skyblue, blue);
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-weight: 700;
+} 
+.middle-background{
+    background-image: url("image/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px blue;
+    border-radius: 10px;
+    height: 65%;
+    background-color: white;
+}
+.experience-area{
+    background-image: url("image/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#fullstack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#junior{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, skyblue );
+    border-image-slice: 1;  
+}
+footer p{
+    font-size: 12px;
+    text-align: center;
 }
