--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h2{
     width: 100%;
 }
 .top-background{  
-    background-image: url("../image/top-banner.png");
+    background-image: url("image/top-banner.png");
     background-repeat: no-repeat;
    
 }
@@ -38,7 +38,7 @@ section{
     font-weight: 700;
 } 
 .middle-background{
-    background-image: url("../image/dream-bg.png");
+    background-image: url("image/dream-bg.png");
     background-repeat: no-repeat;
     background-position: right;
 }
@@ -49,7 +49,7 @@ section{
     background-color: white;
 }
 .experience-area{
-    background-image: url("../image/exp-bg.png");
+    background-image: url("image/exp-bg.png");
     background-repeat: no-repeat;
     background-position: left;
 }
