--- a/style.css
+++ b/style.css
@@ -37,6 +37,14 @@ section{
     border-radius: 10px;
     font-weight: 700;
 } 
+.DownloadCV-btn{
+    text-decoration: none;
+    color: white;
+    background-image: linear-gradient(45deg, skyblue, black);
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-weight: 700;
+}
 .middle-background{
     background-image: url("image/dream-bg.png");
     background-repeat: no-repeat;
